<resources>
    <string name="app_name">Duck</string>
    <string name="text">It\'s a duck!</string>
    <string name="another_text">(not a real one)</string>
    <string name="textOn">on</string>
    <string name="textOff">off</string>
    <string name="sugar">sugar</string>
    <string name="milk">milk</string>
    <string name="cavemen">cavemen</string>
    <string name="astronauts">astronauts</string>
    <string name="click_me">click me</string>
    <string name="image_button">image button</string>

    <string-array name="spinner_values">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>

</resources>
