<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text"
        android:scaleType="centerCrop"
        android:src="@drawable/duck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another_text"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onToggleButtonClicked"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn" />

        <Switch
            android:id="@+id/switch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSwitchClicked"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn" />

        <CheckBox
            android:id="@+id/checkbox_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSugarCheckBoxClicked"
            android:text="@string/sugar" />

        <CheckBox
            android:id="@+id/checkbox_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onMilkCheckBoxClicked"
            android:text="@string/milk" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_cavemen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cavemen" />

            <RadioButton
                android:id="@+id/radio_astronauts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/astronauts" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_values" />

    </LinearLayout>


</FrameLayout>